--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
         "@types/jest": "^29.5.12",
+        "@typescript-eslint/eslint-plugin": "^8.18.2",
+        "@typescript-eslint/parser": "^8.18.2",
         "dotenv": "^16.4.5",
+        "eslint": "^9.17.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "globals": "^15.14.0",
         "jest": "^29.7.0",
         "jest-mock-extended": "^4.0.0-beta1",
         "ts-jest": "^29.2.5",
-        "typescript": "^5.6.2"
-    }, "_moduleAlias" : {
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.18.2"
+    },
+    "_moduleAlias": {
         "@": "dist"
     }
 }
