--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "globals": "^15.14.0",
         "jest": "^29.7.0",
         "jest-mock-extended": "^4.0.0-beta1",
+        "mockdate": "^3.0.5",
         "ts-jest": "^29.2.5",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.18.2"
