--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "repository": "https://github.com/guimiranda/CrazyStackNodeJs.git",
     "author": "leandronetlink@gmail.com",
     "scripts": {
-        "test": "jest --passWithNoTests --silent --noStackTrace --runInBand"
+        "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+        "generate":"yarn plop --plopfile ./generators/plopfile.js"
     },
     "license": "MIT",
     "devDependencies": {
@@ -22,6 +23,7 @@
         "jest": "^29.7.0",
         "jest-mock-extended": "^4.0.0-beta1",
         "mockdate": "^3.0.5",
+        "plop": "^4.0.1",
         "ts-jest": "^29.2.5",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.18.2"
